Text truncation in Product Details now working correctly.

--- a/src/Sections/Returns/Add_Invoices/ReturnsProductDetail.module.css
+++ b/src/Sections/Returns/Add_Invoices/ReturnsProductDetail.module.css
@@ -1,22 +1,32 @@
 .container{
     display: flex;
     flex-direction: row;
-    width: 100%;
-    height: 100%;
+    flex: 1 1 0;
     margin: 1rem 0rem;
+    gap: .25rem;
 }
 
 .vertical_container{
     display: flex;
+    flex: 1 1 0;
     flex-direction: column;
+    gap: .25rem;
+    overflow: hidden;
 }
 
 .numbers{
-    font-size: 14;
+    display: flex;
+    flex-direction: row;
+    font-size: 1rem;
+    color: #6f6f6f;
+    white-space: nowrap;
 }
 
 .product_description{
-    
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .product_status{
